# taipei-sunset

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feedback.yml  new_viewpoint.yml  outcome_report.yml
.github/workflows/: ci.yml  daily_forecast.yml  ingest_dispatch.yml  ingest_report.yml  on_demand_forecast.yml  on_demand_report.yml  outcome_prompt.yml  pages.yml  sync_public.yml  weekly_review.yml
data/: cams.json  viewpoints.json
docs/: data-sources.md  lessons.md  native-app-plan.md  public-plan.md  report-relay.md  review-2026-07.md  uiux.md  ux-review.md
scripts/: gen_icons.py  gen_parity_fixtures.py
src/sunset/: __init__.py  __main__.py  analysis.py  cli.py  geometry.py  ingest.py  logbook.py  notify.py  paths.py  review.py  scoring.py  solar.py  telegram_io.py  weather.py
tests/: test_analysis.py  test_geometry.py  test_ingest.py  test_logbook.py  test_notify.py  test_paths.py  test_review.py  test_scoring.py  test_solar.py  test_uncertainty.py  test_weather.py
web/: index.html  manifest.webmanifest  styles.css  sw.js
web/js/: analysis.js  app.js  config.js  format.js  geometry.js  github.js  i18n.js  light.js  logs.js  scoring.js  solar.js  weather.js
web/test/: fixtures.json  i18n.test.mjs  light.test.mjs  parity.test.mjs
worker/: report-relay.js  wrangler.toml
